[package]
name = "rateway"
version = "0.2.0"
authors = ["Jens Reidel <adrian@travitia.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
twilight-gateway = { version = "0.3", default-features = false, features = [
    "rustls",
    "simd-json",
    "simd-zlib",
] }
twilight-model = "0.3"
twilight-http = { version = "0.3", default-features = false, features = [
    "rustls",
    "simd-json"
] }
twilight-cache-inmemory = "0.3"
tokio-amqp = { version = "1.0", default-features = false }
lapin = { version = "1.6", default-features = false }
tokio = { version = "1.0", default-features = false, features = ["macros", "rt-multi-thread"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive", "rc"] }
structopt = { version = "0.3", default-features = false }
toml = "0.5"
simd-json = { default-features = false, features = [
    "serde_impl",
    "swar-number-parsing"
], version = "0.3" }
env_logger = { version = "0.8", default-features = false, features = ["termcolor", "atty", "humantime"] }
log = "0.4"

[profile.release]
lto = true
