[package]
name = "rateway"
version = "0.2.0"
authors = ["Jens Reidel <adrian@travitia.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
twilight-gateway = { git = "https://github.com/Gelbpunkt/twilight", branch = "local-changes", default-features = false, features = [
    "rustls-webpki-roots",
    "simd-json",
] }
twilight-model = { git = "https://github.com/Gelbpunkt/twilight", branch = "local-changes" }
twilight-http = { git = "https://github.com/Gelbpunkt/twilight", branch = "local-changes", default-features = false, features = [
    "rustls-webpki-roots",
    "simd-json"
] }
twilight-cache-inmemory = { git = "https://github.com/Gelbpunkt/twilight", branch = "local-changes" }
tokio-amqp = { version = "1.0", default-features = false }
lapin = { version = "1.7", default-features = false }
tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive", "rc"] }
toml = "0.5"
simd-json = { version = "0.4", default-features = false, features = [
    "serde_impl",
    "swar-number-parsing"
] }
env_logger = { version = "0.8", default-features = false, features = ["termcolor", "atty", "humantime"] }
log = "0.4"

[profile.release]
codegen-units = 1
debug = false
incremental = false
lto = true
opt-level = 3
